@@ -1,4 +1,5 @@
 29.04.07 - ingwa
+	Cleaned measuretool.{h,cpp}
 	Cleaned katlasmapscale.{h,cpp}
 	Cleaned katlaswindrose.{h,cpp}
 	Cleaned katlascrosshair.{h,cpp}
